# fastapi-rag-eval.

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  pyproject.toml
reports/eval/: eval_report_20260714T191400Z.json
scripts/: ingest.py
src/rag_project/: config.py
src/rag_project/api/: main.py  schemas.py
src/rag_project/eval/: dataset.py  eval_set.jsonl  run_eval.py
src/rag_project/graph/: qa_graph.py
src/rag_project/ingestion/: chunker.py  fetch_docs.py  indexer.py
src/rag_project/retrieval/: retriever.py
tasks/: plan.md  todo.md
tests/integration/: test_end_to_end.py
tests/unit/: test_api.py  test_chunker.py  test_dataset.py  test_fetch_docs.py  test_indexer.py  test_qa_graph.py  test_retriever.py  test_run_eval.py
